--- a/index.html
+++ b/index.html
@@ -181,13 +181,13 @@
 
     const data = {
       newZealand: { id: 'newZealand', name: 'Nieuw-Zeeland', flag: '🇳🇿', period: 'Januari – Februari', challenges: [
-        { id: 'nz1', category: 'culinair', title: 'Marlborough Wijn Meester', description: 'Proef 5 Sauvignon Blancs in Marlborough en kies je favoriet.', points: 50, reward: '🍷 Fles lokale wijn', location: 'Marlborough' },
+        { id: 'nz1', category: 'culinair', title: 'Marlborough Wijn Meester', description: 'Proef 5 Pinot Noirs in Marlborough en kies je favoriet.', points: 50, reward: '🍷 Fles lokale wijn', location: 'Marlborough' },
         { id: 'nz2', category: 'hiking', title: 'Abel Tasman Zonsopgang', description: 'Start vóór zonsopgang en maak een foto op Anchorage Bay.', points: 75, reward: '🥾 Hiking sokken', location: 'Abel Tasman' },
         { id: 'nz3', category: 'kite', title: 'Kaikōura Kite Queen', description: 'Ga kiten met dolfijnen op de achtergrond (op veilige afstand).', points: 100, reward: '🪁 Kite-sticker', location: 'Kaikōura' },
         { id: 'nz4', category: 'sociaal', title: 'Kea Whisperer', description: 'Spot een kea in het wild en imiteer zijn roep.', points: 60, reward: '🦜 Mini kea knuffel', location: 'Arthur’s Pass' },
-        { id: 'nz5', category: 'culinair', title: 'Fergburger Challenge', description: 'Eet een volledige Fergburger zonder bestek.', points: 40, reward: '🍔 Fancy dinner bon', location: 'Queenstown' },
-        { id: 'nz6', category: 'wildcard', title: 'Milford Sound Magie', description: 'Zwem 30 seconden in Milford Sound (veilig!).', points: 150, reward: '🏊 Spa behandeling', location: 'Milford Sound' },
-        { id: 'nz7', category: 'hiking', title: 'Mount Cook Stargazer', description: 'Kampeer en tel 50 vallende sterren.', points: 80, reward: '⭐ Sterrenkaart', location: 'Aoraki/Mt Cook' },
+        { id: 'nz5', category: 'culinair', title: 'Fergburger Challenge', description: 'Eet een volledige vega Fergburger zonder bestek.', points: 40, reward: '🍔 Fancy dinner bon', location: 'Queenstown' },
+        { id: 'nz6', category: 'wildcard', title: 'Milford Sound Magie', description: 'Zwem 30 seconden in Milford Sound.', points: 150, reward: '🏊 Spa behandeling', location: 'Milford Sound' },
+        { id: 'nz7', category: 'hiking', title: 'Mount Cook Stargazer', description: 'Kampeer en tel 5 vallende sterren.', points: 80, reward: '⭐ Sterrenkaart', location: 'Aoraki/Mt Cook' },
         { id: 'nz8', category: 'sociaal', title: 'Street Art Scout', description: 'Vind 10 street-art werken in Christchurch en maak een collage.', points: 45, reward: '🎨 Lokaal kunstwerk', location: 'Christchurch' },
         { id: 'nz9', category: 'culinair', title: 'Vissersvrouw', description: 'Eet fish & chips op de veerboot bij zonsondergang.', points: 35, reward: '🐟 Viskookboek', location: 'Auckland' },
         { id: 'nz10', category: 'romance', title: 'Franz Josef Glacier Kiss', description: 'Geef een kus bij het Glacier viewpoint.', points: 50, reward: '💋 Romantisch verrassingpakket', location: 'Franz Josef' },
@@ -195,10 +195,9 @@
         { id: 'nz12', category: 'kite', title: 'Wellington Wind Warrior', description: 'Kite in de Wellington-wind (bonus: overeind blijven).', points: 90, reward: '💨 Windvaste reisjas', location: 'Wellington' },
         { id: 'nz13', category: 'sociaal', title: 'Bark Bay Seal Selfie', description: 'Selfie met een zeehond (op veilige afstand!).', points: 70, reward: '📸 Waterdichte hoes', location: 'Bark Bay' },
         { id: 'nz14', category: 'culinair', title: 'Akaroa Franse Connectie', description: 'Bestel je hele lunch in het Frans.', points: 60, reward: '🥐 Delicatessen pakket', location: 'Akaroa' },
-        { id: 'nz15', category: 'wildcard', title: 'Picton Midnight Swim', description: 'Nachtelijk zwemmen in de haven (veilig!).', points: 100, reward: '🌙 Diner bij maanlicht', location: 'Picton' },
-        { id: 'nz16', category: 'hiking', title: 'Hooker Valley Touch', description: 'Voltooi de Hooker Valley Track en raak de gletsjer aan.', points: 85, reward: '🏔️ Wandelstok', location: 'Aoraki/Mt Cook' },
-        { id: 'nz17', category: 'culinair', title: 'Pannenkoekenrots Picknick', description: 'Eet zelfgemaakte pannenkoeken bij Pancake Rocks.', points: 65, reward: '🥞 Pannenkoeken-set', location: 'Punakaiki' },
-        { id: 'nz18', category: 'sociaal', title: 'Cape Foulwind Pup Teller', description: 'Tel de baby zeehonden bij de kolonie.', points: 45, reward: '🦭 Cute pin', location: 'Cape Foulwind' }
+        { id: 'nz15', category: 'hiking', title: 'Hooker Valley Touch', description: 'Voltooi de Hooker Valley Track en raak de gletsjer aan.', points: 85, reward: '🏔️ Wandelstok', location: 'Aoraki/Mt Cook' },
+        { id: 'nz16', category: 'culinair', title: 'Pannenkoekenrots Picknick', description: 'Eet zelfgemaakte pannenkoeken bij Pancake Rocks.', points: 65, reward: '🥞 Pannenkoeken-set', location: 'Punakaiki' },
+        { id: 'nz17', category: 'sociaal', title: 'Cape Foulwind Pup Teller', description: 'Tel de baby zeehonden bij de kolonie.', points: 45, reward: '🦭 Cute pin', location: 'Cape Foulwind' }
       ]},
       vietnam: { id: 'vietnam', name: 'Vietnam', flag: '🇻🇳', period: 'Februari – Maart', challenges: [
         { id: 'vn1', category: 'culinair', title: 'Nachtmarkt A-Z', description: 'Eet 26 hapjes van A tot Z (vis is oké).', points: 80, reward: '🍜 Food tour naar keuze', location: 'Hoi An / Hanoi' },
@@ -243,9 +242,9 @@
     ];
 
     const rewardMilestones = [
-      { threshold: 10, text: 'Klein cadeautje: lokale delicatesse 🧁' },
-      { threshold: 25, text: 'Spa/massage behandeling voor twee 💆‍♀️💆' },
-      { threshold: 50, text: 'Fancy dinner naar keuze 🍽️' }
+      { threshold: 10, text: 'Backpack escape - dompel je onder in luxe en boek een nacht naar keuze' },
+      { threshold: 25, text: 'Fancy dinner naar keuze 🍽️ },
+      { threshold: 50, text: 'Je hebt goud verdiend!' }
     ];
 
     const STORAGE_KEY='wr_state_v1';
