--- a/index.html
+++ b/index.html
@@ -306,22 +306,28 @@
         period: 'Januari – Februari',
         challenges: [
           { id: 'nz1', category: 'culinair', title: 'Martinborough Wijn Meester', description: 'Proef 5 Pinot Noirs en kies je favoriet.', points: 50, reward: '🍷 Fles lokale wijn', location: 'Martinborough' },
-          { id: 'nz2', category: 'hiking', title: 'Abel Tasman Zonsopgang', description: 'Start vóór zonsopgang en maak een foto op Anchorage Bay.', points: 75, reward: '🥾 Hiking sokken', location: 'Abel Tasman' },
+          { id: 'nz2', category: 'hiking', title: 'Abel Tasman Zonsopgang', description: 'Start vóór zonsopgang en maak een foto op Anchorage Bay.', points: 75, reward: '💋 Kusje van Danny', location: 'Abel Tasman' },
           { id: 'nz3', category: 'kite', title: 'Kaikōura Kite Queen', description: 'Ga kiten met dolfijnen op de achtergrond (op veilige afstand).', points: 100, reward: '🪁 Kite-sticker', location: 'Kaikōura' },
-          { id: 'nz4', category: 'sociaal', title: 'Kea Whisperer', description: 'Spot een kea in het wild en imiteer zijn roep.', points: 60, reward: '🦜 Mini kea knuffel', location: 'Arthur’s Pass' },
-          { id: 'nz5', category: 'culinair', title: 'Fergburger Challenge', description: 'Eet een vega Fergburger zonder bestek.', points: 40, reward: '🍔 Fancy dinner bon', location: 'Queenstown' },
-          { id: 'nz6', category: 'wildcard', title: 'Milford Sound Magie', description: 'Zwem 30 seconden in Milford Sound!', points: 150, reward: '🏊 Spa behandeling', location: 'Milford Sound' },
+          { id: 'nz4', category: 'sociaal', title: 'Kea Whisperer', description: 'Spot een kea in het wild en imiteer zijn roep.', points: 60, reward: '🦜 Een Kea sleutelhanger', location: 'Arthur’s Pass' },
+          { id: 'nz5', category: 'culinair', title: 'Fergburger Challenge', description: 'Eet een vega Fergburger zonder bestek.', points: 40, reward: '🍔 Tissue om je handen schoon te maken', location: 'Queenstown' },
+          { id: 'nz6', category: 'wildcard', title: 'Milford Sound Magie', description: 'Zwem 30 seconden in Milford Sound!', points: 150, reward: '🏊 Een warme knuffel van je vriendje', location: 'Milford Sound' },
           { id: 'nz7', category: 'hiking', title: 'Mount Cook Stargazer', description: 'Kampeer en tel 10 vallende sterren.', points: 80, reward: '⭐ Sterrenkaart', location: 'Aoraki/Mt Cook' },
-          { id: 'nz8', category: 'sociaal', title: 'Street Art Scout', description: 'Vind 10 street-art werken in Christchurch en maak een collage.', points: 45, reward: '🎨 Lokaal kunstwerk', location: 'Christchurch' },
-          { id: 'nz9', category: 'culinair', title: 'Vissersvrouw', description: 'Eet fish & chips op de veerboot bij zonsondergang.', points: 35, reward: '🐟 Viskookboek', location: 'Auckland' },
-          { id: 'nz10', category: 'romance', title: 'Franz Josef Glacier Kiss', description: 'Geef een kus bij het Glacier viewpoint.', points: 50, reward: '💋 Romantisch verrassingpakket', location: 'Franz Josef' },
-          { id: 'nz11', category: 'hiking', title: 'Te Anau Glowworm', description: 'Bezoek de glowworm grotten; 10s volledige stilte.', points: 55, reward: '✨ Glow-in-the-dark sterren', location: 'Te Anau' },
+          { id: 'nz8', category: 'sociaal', title: 'Street Art Scout', description: 'Vind 10 street-art werken in Christchurch en maak een collage.', points: 45, reward: '🎨 Ansichtkaart', location: 'Christchurch' },
+          { id: 'nz9', category: 'culinair', title: 'Vissersvrouw', description: 'Eet fish & chips op de veerboot bij zonsondergang.', points: 35, reward: '🐟 Een smintje', location: 'Auckland' },
+          { id: 'nz10', category: 'romance', title: 'Franz Josef Glacier Kiss', description: 'Geef een kus bij het Glacier viewpoint.', points: 50, reward: '💋 Eeuwige liefde van je vriendje', location: 'Franz Josef' },
+          { id: 'nz11', category: 'hiking', title: 'Te Anau Glowworm', description: 'Bezoek de glowworm grotten; 10s volledige stilte.', points: 55, reward: '✨ Gerrit in the dark', location: 'Te Anau' },
           { id: 'nz12', category: 'kite', title: 'Wellington Wind Warrior', description: 'Kite in de Wellington-wind (bonus: overeind blijven).', points: 90, reward: '💨 Windvaste reisjas', location: 'Wellington' },
-          { id: 'nz13', category: 'sociaal', title: 'Bark Bay Seal Selfie', description: 'Selfie met een zeehond (op veilige afstand!).', points: 70, reward: '📸 Waterdichte hoes', location: 'Bark Bay' },
-          { id: 'nz14', category: 'culinair', title: 'Akaroa Franse Connectie', description: 'Bestel je hele lunch in het Frans.', points: 60, reward: '🥐 Delicatessen pakket', location: 'Akaroa' },
-          { id: 'nz15', category: 'hiking', title: 'Hooker Valley Touch', description: 'Voltooi de Hooker Valley Track en raak de gletsjer aan.', points: 85, reward: '🏔️ Wandelstok', location: 'Aoraki/Mt Cook' },
-          { id: 'nz16', category: 'culinair', title: 'Pannenkoekenrots Picknick', description: 'Eet zelfgemaakte pannenkoeken bij Pancake Rocks.', points: 65, reward: '🥞 Pannenkoeken-set', location: 'Punakaiki' },
-          { id: 'nz17', category: 'sociaal', title: 'Cape Foulwind Pup Teller', description: 'Tel de baby zeehonden bij de kolonie.', points: 45, reward: '🦭 Cute pin', location: 'Cape Foulwind' }
+          { id: 'nz13', category: 'sociaal', title: 'Bark Bay Seal Selfie', description: 'Selfie met een zeehond (op veilige afstand!).', points: 70, reward: '📸 Een like op je insta foto', location: 'Bark Bay' },
+          { id: 'nz14', category: 'culinair', title: 'Akaroa Franse Connectie', description: 'Bestel je hele lunch in het Frans.', points: 60, reward: '🥐 Kaascroissantje van Danny', location: 'Akaroa' },
+          { id: 'nz15', category: 'hiking', title: 'Hooker Valley Touch', description: 'Voltooi de Hooker Valley Track en raak de gletsjer aan.', points: 85, reward: '🏔️ Een lekker drankje naar keuze', location: 'Aoraki/Mt Cook' },
+          { id: 'nz16', category: 'culinair', title: 'Pannenkoekenrots Picknick', description: 'Eet zelfgemaakte pannenkoeken bij Pancake Rocks.', points: 65, reward: '🥞 Danny doet de afwas', location: 'Punakaiki' },
+          { id: 'nz17', category: 'sociaal', title: 'Cape Foulwind Pup Teller', description: 'Tel de baby zeehonden bij de kolonie.', points: 45, reward: '🦭 Kusjes van de zeehonden baby', location: 'Cape Foulwind' },
+          { id: 'nz18', category: 'hiking', title: 'Tongariro Alpine Crossing', description: 'Loop deze spectaculaire hike en leg het vast.', points: 70, reward: '🛁 In vuur en vlam vanavond :P', location: 'Tongariro NP' },
+          { id: 'nz18', category: 'wildcard', title: 'Free camping Lake Pukaki', description: 'Zet de camper bij the Pines op de mooiste plek van het meer ', points: 70, reward: '🍷Flesje openen op deze fantastische locatie', location: 'Lake Pukaki' },
+          { id: 'nz19', category: 'romance', title: 'NZ Sunset', description: 'Kus bij zonsondergang op het strand.', points: 50, reward: '💋 Romantische avond met Danny en Gellie', location: 'Overal in NZ' },
+          { id: 'nz20', category: 'wildcard', title: 'Hobbiton Selfie', description: 'Maak een creatieve selfie in Hobbiton.', points: 40, reward: '🍺 Een biertje in de Green Dragon', location: 'Hobbiton' },
+          { id: 'nz21', category: 'culinair', title: 'L&P Proeverij', description: 'Proef L&P in 3 verschillende smaken.', points: 30, reward: '🥤 Flesje LP', location: 'Overal in NZ'},
+          { id: 'nz22', category: 'hiking', title: 'Roys Peak Sunrise', description: 'Vroege hike voor zonsopgang foto.', points: 90, reward: '🌄 Ontbijt van Danny', location: 'Wanaka' }
         ]
       },
       vietnam: {
@@ -330,20 +336,54 @@
         flag: '🇻🇳',
         period: 'Februari – Maart',
         challenges: [
-          { id: 'vn1', category: 'culinair', title: 'Nachtmarkt A-Z', description: 'Eet 26 hapjes van A tot Z (vis is oké).', points: 80, reward: '🍜 Food tour naar keuze', location: 'Hoi An / Hanoi' },
-          { id: 'vn2', category: 'sociaal', title: 'Tết-buddy', description: 'Vier Tết met locals en leer 3 wensen in het Vietnamees.', points: 60, reward: '🧧 Geluksamuletten', location: 'Overal' },
-          { id: 'vn3', category: 'hiking', title: 'Sapa Ridge Walk', description: 'Zonsopgang hike met rijstterrassen uitzicht.', points: 70, reward: '🥾 Gaiters', location: 'Sapa' },
-          { id: 'vn4', category: 'wildcard', title: 'Verborgen Waterval', description: 'Vind een geheime waterval en deel GPS-coördinaten.', points: 90, reward: '💦 Drybag', location: 'Noord-VN' },
-          { id: 'vn5', category: 'culinair', title: '8-Poot Challenge', description: 'Probeer iets met >8 pootjes op een nachtmarkt 😉', points: 100, reward: '🍺 Verfrissingspakket', location: 'Saigon/Hanoi' }
+          { id: 'vn1', category: 'culinair', title: 'Nachtmarkt A-Z', description: 'Probeer 5 gerechtjes die beginnen met een andere letter', points: 80, reward: '🍜 Toetjes is van mij', location: 'Hoi An / Hanoi' },
+          { id: 'vn3', category: 'hiking', title: 'Sapa Ridge Walk', description: 'Zonsopgang hike met rijstterrassen uitzicht.', points: 70, reward: '🥾 Danny zorgt voor ontbijt', location: 'Sapa' },
+          { id: 'vn4', category: 'wildcard', title: 'Verborgen Waterval', description: 'Vind een geheime waterval en deel GPS-coördinaten.', points: 90, reward: '💦 Zwemmen en Danny droogt je af', location: 'Noord-VN' },
+          { id: 'vn5', category: 'culinair', title: '8-Poot Challenge', description: 'Probeer iets met >8 pootjes op een nachtmarkt 😉', points: 100, reward: '🍺 Biertje van Danny', location: 'Saigon/Hanoi' },
+          { id: 'vn6', category: 'romance', title: 'Halong Bay Sunset', description: 'Kus bij zonsondergang op een boot.', points: 60, reward: '💋 extra zoen van je vriendje', location: 'Halong Bay' },
+          { id: 'vn7', category: 'sociaal', title: 'Ao Dai Fashionista', description: 'Laat een Ao Dai op maat maken en draag het.', points: 70, reward: '👗 Foto in Ao Dai', location: 'Hoi An'},
+          { id: 'vn8', category: 'hiking', title: 'Marble Mountains Climb', description: 'Beklim de Marble Mountains en vind een grot.', points: 50, reward: '🗿 Miniatuur Boeddha', location: 'Da Nang' },
+          { id: 'vn9', category: 'kite', title: 'Mui Ne Kite Session', description: 'Kite 1 uur in Mui Ne en maak een sprong.', points: 90, reward: '💆 Een massage van je vriendje ', location: 'Mui Ne' },
+          { id: 'vn10', category: 'sociaal', title: 'Cyclo Chauffeur', description: 'Maak een ritje in een cyclo en leer 3 woorden Vietnamees.', points: 60, reward: '🚲 kleine souvenir', location: 'Hanoi / Saigon' },
+          { id: 'vn11', category: 'culinair', title: 'Probeer Egg Coffee', description: 'Proef en beoordeel een egg coffee.', points: 70, reward: '🥚 Egg coffee', location: 'Hanoi / Saigon' },
+          { id: 'vn12', category: 'culinair', title: 'Bia Hoi Proeverij', description: 'Proef 3 verschillende soorten Bia Hoi.', points: 40, reward: '🍺 Bia Hoi traktatie', location: 'Hanoi / Saigon' },
+          { id: 'vn13', category: 'wildcard', title: 'Cu Chi Tunnels', description: 'Kruip door een deel van de tunnels.', points: 60, reward: '🕳️ Verassing in het donker', location: 'Cu Chi' },
+          { id: 'vn14', category: 'wildcard', title: 'Strand Challenge', description: 'Vind een uniek voorwerp op het strand en maak een foto ermee.', points: 50, reward: '🏖️ Strand souvenir', location: 'Diverse stranden in Vietnam' },
+          { id: 'vn15', category: 'romance', title: 'Hoi An Lantaarn Kus', description: 'Kus onder de lantaarns in Hoi An.', points: 60, reward: '💋 Extra zoen van je vriendje', location: 'Hoi An' },
+          { id: 'vn16', category: 'hiking', title: 'Ba Be Lake Trek', description: 'Maak een trek rondom Ba Be Lake en spot wildlife.', points: 80, reward: '🦜 Miniatuur dier', location: 'Ba Be National Park' },
+          { id: 'vn17', category: 'culinair', title: 'Street Food Tour', description: 'Doe een street food tour en beoordeel 5 gerechten.', points: 90, reward: '🍲 Street food traktatie', location: 'Hanoi / Saigon' },
+          { id: 'vn18', category: 'sociaal', title: 'Local Market Explorer', description: 'Bezoek een lokale markt en leer over 3 ingrediënten.', points: 70, reward: '🛒 Markt souvenir', location: 'Diverse markten in Vietnam' },
+          { id: 'vn19', category: 'wildcard', title: 'Mekong Delta Boottocht', description: 'Maak een boottocht door de Mekong Delta en spot unieke flora/fauna.', points: 80, reward: '🚤 Miniatuur boot', location: 'Mekong Delta' },
+          { id: 'vn20', category: 'romance', title: 'Sunset at Lang Co Beach', description: 'Kus bij zonsondergang op Lang Co Beach.', points: 60, reward: '💋 Romantische avond met Danny en Gellie', location: 'Lang Co Beach'  },
+          { id: 'vn21', category: 'culinair', title: 'Loempia Master', description: 'Maak je eigen loempia met een local.', points: 70, reward: '🥢 Loempia traktatie', location: 'Hoi An'}          
+         
         ]
       },
       china: {
         id: 'china', name: 'China', flag: '🇨🇳', period: 'Maart – April',
         challenges: [
           { id: 'cn1', category: 'culinair', title: 'Sichuan Vuurdoop', description: 'Overleef hotpot level 5 🔥', points: 100, reward: '🥵 Milk tea traktatie', location: 'Chengdu' },
-          { id: 'cn2', category: 'sociaal', title: 'Mahjong Master', description: 'Win een potje van Chinese oma’s.', points: 90, reward: '🀄 Mini setje', location: 'Chengdu / Shanghai' },
+          { id: 'cn2', category: 'sociaal', title: 'Mahjong Master', description: 'Win een potje van Chinese oma’s.', points: 200, reward: '🀄 Mini setje', location: 'Chengdu / Shanghai' },
           { id: 'cn3', category: 'hiking', title: 'Tiger Leaping Gorge', description: 'Trek de kloof en vind een “secret view”.', points: 120, reward: '⛰️ Buff', location: 'Yunnan' },
-          { id: 'cn4', category: 'wildcard', title: 'Theeceremonie', description: 'Volg een theeceremonie en noteer 3 theesoorten.', points: 60, reward: '🍵 Theesetje', location: 'Hangzhou' }
+          { id: 'cn4', category: 'wildcard', title: 'Theeceremonie', description: 'Volg een theeceremonie en noteer 3 theesoorten.', points: 60, reward: '🍵 Theesetje', location: 'Hangzhou' },
+          { id: 'cn5', category: 'romance', title: 'Great Wall Kiss', description: 'Kus op de Great Wall bij zonsondergang.', points: 80, reward: '💋 Kusje van Danny', location: 'Mutianyu' },
+          { id: 'cn6', category: 'culinair', title: 'Dim Sum Proeverij', description: 'Proef 5 verschillende dim sum gerechtjes.', points: 70, reward: '🥢 Dim sum traktatie', location: 'Hong Kong' },
+          { id: 'cn7', category: 'sociaal', title: 'Temple Fair Fun', description: 'Bezoek een tempel fair en leer 3 tradities.', points: 90, reward: '🎎 Souvenir van de fair', location: 'Beijing' },
+          { id: 'cn8', category: 'hiking', title: 'Zhangjiajie Avatar Mountains', description: 'Wandel tussen de karstbergen en spot wildlife.', points: 110, reward: '🦜 Miniatuur dier', location: 'Zhangjiajie' },
+          { id: 'cn9', category: 'kite', title: 'Weifang Kite Festival', description: 'Vlieg een vlieger op het festival en maak een sprong.', points: 95, reward: '🪁 Vlieger-sticker', location: 'Weifang' },
+          { id: 'cn10', category: 'culinair', title: 'Peking Eend Proeverij', description: 'Eet Peking eend op z’n best.', points: 85, reward: '🦆 Peking eend traktatie', location: 'Beijing' },
+          { id: 'cn11', category: 'sociaal', title: 'Calligraffiti Artist', description: 'Leer 3 karakters in Chinese kalligrafie.', points: 75, reward: '🖌️ een pen', location: 'Overal in China'},
+          { id: 'cn12', category: 'wildcard', title: 'Shanghai Skyline Selfie', description: 'Maak een creatieve selfie met de skyline.', points: 65, reward: '📸 Een like op je insta foto', location: 'Shanghai'},
+          { id: 'cn13', category: 'romance', title: 'West Lake Romance', description: 'Kus bij zonsondergang op een bootje.', points: 70, reward: '💋 Extra zoen van je vriendje', location: 'Hangzhou'},
+          { id: 'cn14', category: 'hiking', title: 'Longji Rice Terraces', description: 'Trek de rijstterrassen en spot een lokale familie.', points: 100, reward: '🏞️ groepsfoto', location: 'Longju Rice Terraces' },
+          { id: 'cn15', category: 'culinair', title: 'Street Food Safari', description: 'Doe een street food tour en beoordeel 5 gerechten.', points: 90, reward: '🍲 Street food traktatie', location: 'Chengdu / Xi’an' },
+          { id: 'cn16', category: 'sociaal', title: 'Local Market Explorer', description: 'Bezoek een lokale markt en leer over 3 ingrediënten.', points: 70, reward: '🛒 Markt souvenir', location: 'Diverse markten in China' },
+          { id: 'cn17', category: 'wildcard', title: 'Li River Cruise', description: 'Maak een boottocht op de Li River en spot unieke flora/fauna.', points: 80, reward: '🚤 Miniatuur boot', location: 'Guilin' },
+          { id: 'cn18', category: 'romance', title: 'Sunset at The Bund', description: 'Kus bij zonsondergang met uitzicht op de skyline.', points: 70, reward: '💋 Romantische avond met Danny en Gellie', location: 'Shanghai' },
+          { id: 'cn19', category: 'culinair', title: 'Hotpot Master', description: 'Maak je eigen hotpot met een local.', points: 80, reward: '🥢 Hotpot traktatie', location: 'Chengdu' },   
+          { id: 'cn20', category: 'romance', title: 'Lantern Festival Kiss', description: 'Kus tijdens het Lantern Festival.', points: 90, reward: '💋 Extra zoen van je vriendje', location: 'Overal in China' },
+          { id: 'cn21', category: 'hiking', title: 'Jiuzhaigou Valley Trek', description: 'Wandel door de kleurrijke Jiuzhaigou vallei.', points: 110, reward: '🏞️ groepsfoto', location: 'Jiuzhaigou' },
+          { id: 'cn22', category: 'kite', title: 'Dunhuang Desert Kite', description: 'Vlieg een vlieger in de Gobi-woestijn.', points: 100, reward: '🪁 Vlieger-sticker', location: 'Dunhuang' }
         ]
       },
       taiwan: {
@@ -392,7 +432,7 @@
     const rewardMilestones = [
       { threshold: 10, text: 'Backpacking escape - een nacht in een luxe accomodatie naar keuze 🧁' },
       { threshold: 25, text: 'Fancy pancy dinner naar keuze 🍽️' },
-      { threshold: 50, text: 'Je bent goud waard🎁' }
+      { threshold: 50, text: 'Je bent goud waard 🎁' }
     ];
 
     /* ------------------------
@@ -827,3 +867,4 @@
   </script>
 </body>
 </html>
+
