--- a/index.html
+++ b/index.html
@@ -651,7 +651,7 @@
 
       const html = `
         <div class="leaderboard">
-          <div class="leaderboard-item"><strong>Jullie</strong><span>${_counts.points} punten • ${_counts.completed}/${_counts.total} challenges</span></div>
+          <div class="leaderboard-item"><strong>Anouk</strong><span>${_counts.points} punten • ${_counts.completed}/${_counts.total} challenges</span></div>
         </div>
         <div class="achievement-grid">
           ${achievements.map(a => {
