--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
       nederland: {
         id: 'nederland',
         name: 'Nederland',
-        flag: '🇳l',
+        flag: '🇳🇱',
         period: 'vandaag',
         challenges: [
           { id: 'nl1', category: 'amsterdam', title: 'De dierenriem', description: 'drink minimaal een biertje bij 5 verschillende kroegen uit de dierenriem', points: 50, reward: '🌄Ontbijtje op bed morgenochtend', location: 'Amsterdam' },
