--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
           { id: 'cn29', category: 'hiking', title: 'Yunnan Rice Terrace Trek', description: 'Wandel door de rijstterrassen van Yunnan en ontmoet een lokale familie.', points: 110, reward: '🏞️ Groepsfoto met de familie', location: 'Yunnan'    },
           { id: 'cn30', category: 'sociaal', title: 'Local Market Explorer', description: 'Bezoek een lokale markt en leer over 3 ingrediënten.', points: 70, reward: '🛒 Markt souvenir', location: 'Diverse markten in China'    },
           { id: 'cn31', category: 'culinair', title: 'Street Food Masterclass', description: 'Volg een street food kookworkshop en maak je eigen gerecht.', points: 100, reward: '🍜 Zelfgemaakt gerecht', location: 'Chengdu / Xi’an'    },
-          { id: 'cn32', category: 'culinair', title: 'Craft Beer Explorer', description: 'Proef 3 verschillende ambachtelijke bieren in een lokale brouwerij.', points: 80, reward: '🍺 Flesje ambachtelijk bier', location: 'Shanghai' },
+          { id: 'cn32', category: 'culinair', title: 'Craft Beer Explorer', description: 'Proef 3 verschillende ambachtelijke bieren in een lokale brouwerij.', points: 80, reward: '🍺 Flesje ambachtelijk bier', location: 'Shanghai' }
           
           ]
       },
@@ -518,7 +518,7 @@
           { id: 'np4', category: 'wildcard', title: 'Pokhara Paraglide Pro', description: 'Maak een tandem-paraglide sprong in Pokhara met uitzicht op de Annapurna-bergen.', points: 200, reward: '📹 Danny filmt je vlucht voor later', location: 'Pokhara' },
           { id: 'np5', category: 'wildcard', title: 'Rhino Spotter', description: 'Ga op safari in Chitwan NP en spot ten minste één neushoorn in het wild.', points: 90, reward: '🦏 Houten neushoorn-souvenir', location: 'Chitwan NP' },
           { id: 'np6', category: 'romance', title: 'Phewa Lake Moonlight Kiss', description: 'Kus elkaar bij maanlicht aan de oever van het Phewa-meer in Pokhara.', points: 60, reward: '💋 Romantische avond met Danny en Gellie', location: 'Pokhara' },
-          { id: 'np7', category: 'wildcard', title: 'Everest Air Safari', description: 'Neem een bergvlucht rond de Mount Everest en herken 3 beroemde toppen vanuit de lucht.', points: 150, reward: '📜 Everest-vlucht certificaat als aandenken', location: 'Mount Everest regio' }
+          { id: 'np7', category: 'wildcard', title: 'Everest Air Safari', description: 'Neem een bergvlucht rond de Mount Everest en herken 3 beroemde toppen vanuit de lucht.', points: 150, reward: '📜 Everest-vlucht certificaat als aandenken', location: 'Mount Everest regio' },
           { id: 'np8', category: 'hiking', title: 'Annapurna Base Camp Trek', description: 'Hike naar het Annapurna Base Camp en maak een groepsfoto met de bergen op de achtergrond.', points: 130, reward: '🏞️ Groepsfoto', location: 'Annapurna NP' },
           { id: 'np9', category: 'culinair', title: 'Momo Master', description: 'Eet een portie van 10 momos (Tibetaanse dumplings) in één zit.', points: 60, reward: '🥟 Extra portie van Danny', location: 'Kathmandu / Pokhara' },
           { id: 'np10', category: 'sociaal', title: 'Local Language Pro', description: 'Leer 5 basiszinnen in het Nepalees en gebruik ze in een gesprek met een local.', points: 70, reward: '📚 Taalboekje Nepalees', location: 'Overal' },
