--- a/index.html
+++ b/index.html
@@ -588,7 +588,7 @@
     // Beloning thresholds (bij X gehaalde challenges)
     const rewardMilestones = [
       { threshold: 20, text: 'Gezellige Picknick georganiseerd door Danny 🍷' },
-      { treshold: 40, text: 'Backpacking escape - een nacht in een luxe accomodatie naar keuze 🌅' },
+      { threshold: 40, text: 'Backpacking escape - een nacht in een luxe accomodatie naar keuze 🌅' },
       { threshold: 60, text: 'Workshop naar keuze in het land waar we nu zijn🥟' },
       { threshold: 80, text: 'Een heel weekend lang in de watten gelegd worden 🛀'},
       { threshold: 100, text: 'Fancy pancy dinner naar keuze 🍽️' },
