--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
   <div class="floating-hearts" id="hearts"></div>
   <div class="app-container">
     <div class="header">
-      <h1>🌍 Anouk's Wereldreis Challenge 2025</h1>
+      <h1>🌍 Anouk's Wereldreis Challenge 2026</h1>
       <p>Voor nog meer onvergetelijke momenten💋</p>
     </div>
 
@@ -797,7 +797,7 @@
 
       const html = `
         <div class="leaderboard">
-          <div class="leaderboard-item"><strong>Jullie</strong><span>${_counts.points} punten • ${_counts.completed}/${_counts.total} challenges</span></div>
+          <div class="leaderboard-item"><strong>Anouk</strong><span>${_counts.points} punten • ${_counts.completed}/${_counts.total} challenges</span></div>
         </div>
         <div class="achievement-grid">
           ${achievements.map(a => {
@@ -936,7 +936,7 @@
       const wrap = document.getElementById('countdownContainer');
       const html = `
         <div class="countdown">
-          <div><strong>⏳ Countdown tot vertrek (${tripStartDate})</strong></div>
+          <div><strong>⏳Countdown tot ✈️🚐 (${tripStartDate})</strong></div>
           <div class="countdown-timer">
             <div class="countdown-item"><div class="countdown-value" id="cd-days">0</div><div class="countdown-label">dagen</div></div>
             <div class="countdown-item"><div class="countdown-value" id="cd-hours">0</div><div class="countdown-label">uren</div></div>
